# quarto-now

./: .gitignore  justfile
client/quarto-now/: .env.development  .env.production  justfile  package-lock.json  package.json
client/quarto-now/public/: test.html  test.txt
client/quarto-now/src/: App.tsx  index.tsx
client/quarto-now/src/api/: lobby.ts
client/quarto-now/src/assets/: game-input-definition.ts  gameInputDefinitions.ts
client/quarto-now/src/components/game-grid-block/: game-grid-block.tsx
client/quarto-now/src/components/iframe/: iframe.tsx
client/quarto-now/src/context/: clientContextProvider.tsx  webSocketContextProvider.tsx
client/quarto-now/src/hooks/: useWebsocket.ts
client/quarto-now/src/lib/: env.ts  utils.ts
client/quarto-now/src/types/: apiSchemas.ts  gameInputSchema.ts  websocketMessageSchema.ts
client/quarto-now/src/views/GamePageURLView/: gamePageUrlView.tsx
server/: .env.development  go.mod  go.sum  justfile  main.go
server/internal/websocket/: ws_handler.go  ws_service.go
server/router/: router.go
server/scripts/: init.sql
server/services/game_service/: go.mod  go.sum  main.go
server/services/game_service/db/: db.go  handlers.go  models.go  service.go
server/services/game_service/router/: handlers.go  router.go
server/services/generation_service/: main.py  pyproject.toml
server/services/generation_service/utils/: output.py
server/services/lobby_service/: go.mod  go.sum  main.go
server/services/lobby_service/api/: cors.go
server/services/lobby_service/router/: router.go
server/utils/: dotenv.go
(+11 files in other folders)
