[tool.poetry]
name = "generation-service"
version = "0.1.0"
description = "Generates a turn based game given the user prompt"
authors = ["Hristo <sandevh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
langchain = "^0.2.1"
langchain-openai = "^0.1.7"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
langchain-community = "^0.2.1"
fastapi-utilities = "^0.2.0"
langchain-anthropic = "^0.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
